--- a/examples/alauda-compose.yml
+++ b/examples/alauda-compose.yml
@@ -2,6 +2,7 @@ redis:
   image: index.alauda.cn/library/redis:latest
   ports:
   - '6379'
+  net: flannel
 web:
   command: python app.py
   image: index.alauda.cn/alauda/flask-redis:latest
@@ -9,4 +10,5 @@ web:
   - redis:redis
   ports:
   - '80/http'
+  net: flannel
   
